Force correct full BetCreationDialog.java with all fields declared