@@ -2,6 +2,7 @@ package com.vxv.chatbet.ui;
 
 import com.vxv.chatbet.bet.BetManager;
 import com.vxv.chatbet.bet.BetType;
+import com.vxv.chatbet.bet.DropOutcome;
 import com.vxv.chatbet.bet.Poll;
 
 import javax.swing.*;
@@ -20,12 +21,15 @@ public class BetCreationDialog extends JDialog {
     private final JComboBox<String> triggerCombo = new JComboBox<>(new String[]{"None", "ETC", "GOAL_30"});
     private final JButton createButton = new JButton("Create Poll");
 
+    private final JTextArea suggestedOutcomesArea = new JTextArea(4, 30);
+    private List<DropOutcome> suggestedOutcomes = List.of();
+
     public BetCreationDialog(Frame owner, BetManager betManager) {
         super(owner, "Create New Bet Poll", true);
         this.betManager = betManager;
 
         setLayout(new BorderLayout(10, 10));
-        setSize(450, 220);
+        setSize(480, 280);
         setLocationRelativeTo(owner);
 
         JPanel panel = new JPanel(new GridLayout(5, 2, 8, 8));
@@ -39,8 +43,6 @@ public class BetCreationDialog extends JDialog {
 
         panel.add(new JLabel("Options (comma separated):"));
         panel.add(optionsField);
-
-        // Note: When Fixed Odds + module data is available, probabilities are shown automatically.
 
         panel.add(new JLabel("Auto-Resolve Trigger:"));
         panel.add(triggerCombo);
@@ -62,32 +64,28 @@ public class BetCreationDialog extends JDialog {
         add(buttonPanel, BorderLayout.PAGE_END);
 
         createButton.addActionListener(e -> createPoll());
-
         typeCombo.addActionListener(e -> updateOptionsForFixedOdds());
 
-        // Default values for quick testing
         questionField.setText("Will I get an ETC in the next 200 pickpockets?");
         optionsField.setText("Yes,No");
         typeCombo.setSelectedItem(BetType.MULTIPLE_CHOICE);
         triggerCombo.setSelectedItem("ETC");
     }
 
-    public void setSuggestedOutcomes(java.util.List<com.vxv.chatbet.bet.DropOutcome> outcomes) {
-        this.suggestedOutcomes = outcomes != null ? outcomes : java.util.Collections.emptyList();
+    public void setSuggestedOutcomes(List<DropOutcome> outcomes) {
+        this.suggestedOutcomes = outcomes != null ? outcomes : List.of();
         updateOptionsForFixedOdds();
     }
 
     private void updateOptionsForFixedOdds() {
         if (typeCombo.getSelectedItem() == BetType.FIXED_ODDS && !suggestedOutcomes.isEmpty()) {
-            // Pre-fill options with probabilities
             String joined = suggestedOutcomes.stream()
                     .map(o -> String.format("%s (%.2f%%)", o.getName(), o.getProbability() * 100))
-                    .collect(java.util.stream.Collectors.joining(", "));
+                    .collect(Collectors.joining(", "));
             optionsField.setText(joined);
 
-            // Show formatted list
             StringBuilder sb = new StringBuilder();
-            for (com.vxv.chatbet.bet.DropOutcome o : suggestedOutcomes) {
+            for (DropOutcome o : suggestedOutcomes) {
                 sb.append(String.format("• %s — %.2f%%\n", o.getName(), o.getProbability() * 100));
             }
             suggestedOutcomesArea.setText(sb.toString());
@@ -101,32 +99,24 @@ public class BetCreationDialog extends JDialog {
         BetType type = (BetType) typeCombo.getSelectedItem();
         String optionsText = optionsField.getText().trim();
 
-        if (question.isEmpty() || optionsText.isEmpty()) {
-            JOptionPane.showMessageDialog(this, "Please fill in question and options.");
-            return;
-        }
-
         List<String> options = Arrays.stream(optionsText.split(","))
                 .map(String::trim)
                 .filter(s -> !s.isEmpty())
                 .collect(Collectors.toList());
 
-        if (options.size() < 2) {
+        if (options.size() < 2 && type != BetType.FIXED_ODDS) {
             JOptionPane.showMessageDialog(this, "Please provide at least 2 options.");
             return;
         }
 
         Poll poll = betManager.createPoll(question, type, options);
 
-        // Set resolution trigger if not "None"
         String trigger = (String) triggerCombo.getSelectedItem();
         if (!"None".equals(trigger)) {
             poll.withResolutionTrigger(trigger);
         }
 
-        JOptionPane.showMessageDialog(this,
-                "Poll #" + poll.getId() + " created successfully!");
-
+        JOptionPane.showMessageDialog(this, "Poll #" + poll.getId() + " created successfully!");
         dispose();
     }
 }
